<resources>
    <string name="app_name">Laundry UI</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="Notification">Notifications</string>
    <string name="messages">Messages</string>
    <string name="notificationF">Notification Fragment</string>
    <string name="this_is_search_fragment">This is Search Fragment</string>
    <string name="notificationsFragment">Notifications</string>
    <string name="HomeFragment">home</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="location">Location</string>
    <string name="_00">$00</string>
    <string name="name">Name</string>
</resources>