<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_notifications_none_24"
            android:title="@string/notification" />
<!--        <item-->
<!--            android:id="@+id/settingFragment"-->
<!--            android:icon="@drawable/ic_baseline_message_24"-->
<!--            android:title="@string/message" />-->
    </group>
</menu>