<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="240dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="100dp"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="10dp"
    android:elevation="0dp"
    android:clickable="true"
    android:focusable="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recommend_item_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter" />
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/recommend_item_image">

            <TextView
                android:id="@+id/recommend_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recommend_item_price"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-28dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recommend_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_00"
                android:layout_margin="5dp"
                android:textColor="@color/teal_200"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/recommend_item_location_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/recommend_item_name"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/recommend_item_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recommend_item_name"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/recommend_item_location_img"
                android:text="@string/location" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>